--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <h1>Підписка на Google Pro AI</h1>
             <p>Розкрийте потенціал штучного інтелекту для себе! 🚀</p>
             
-            <button class="btn" id="orderBtn">ЗАКАЗАТИ</button>
+            <button class="btn" id="orderBtn">ЗАМОВИТИ</button>
         </div>
     </div>
 
